# Practics_1st_semester

./: CMakeLists.txt  Fuctions.cpp  Practice2.cpp
Practice2/: Practice2.cpp
Ptactice3/: Functions.cpp  Functions.hpp  input.txt  output.txt  Практика 3.cpp
cpp/: Fuctions.cpp  Multiplication.cpp
hpp/: Functions.hpp  Multiplication.hpp
